[gd_scene load_steps=21 format=2]

[ext_resource path="res://imagens/spritesheet_player/arrow_right_icon_133719.png" type="Texture" id=1]
[ext_resource path="res://cenas/jogador/jogador.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/situacoes/situacao_1.gd" type="Script" id=3]
[ext_resource path="res://imagens/mapa_principal/mapa-vtal-2.0.png" type="Texture" id=5]
[ext_resource path="res://imagens/spritesheet_player/3ef35179c31986a (4).png" type="Texture" id=6]
[ext_resource path="res://imagens/spritesheet_player/3ef35179c31986a (2).png" type="Texture" id=7]
[ext_resource path="res://cenas/transicoes/transicao_casas.tscn" type="PackedScene" id=8]
[ext_resource path="res://imagens/situacoes/aten.png" type="Texture" id=9]
[ext_resource path="res://imagens/situacoes/parabens.png" type="Texture" id=10]
[ext_resource path="res://fontes/PTSansNarrow-Regular.ttf" type="DynamicFontData" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.5, 160 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "esquerda",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("NPC:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1189, 331 ), Vector2( 327, 261 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Situacao1"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("NPC:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1155, 337 ), Vector2( 353, 337 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 19
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=4]
size = 27
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=10]
size = 25
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=11]
size = 70
font_data = ExtResource( 11 )

[node name="Situação1" type="Area2D"]
script = ExtResource( 3 )

[node name="Mapa" type="Sprite" parent="."]
position = Vector2( -40, -1154 )
scale = Vector2( 1.9, 1.9 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 3
position = Vector2( 193, 239 )
shape = SubResource( 1 )

[node name="NPC" type="AnimatedSprite" parent="."]
position = Vector2( 1189, 331 )
scale = Vector2( 2.39655, 2.39655 )
frames = SubResource( 7 )
animation = "esquerda"
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="NPC"]
root_node = NodePath("../..")
anims/RESET = SubResource( 2 )
anims/Situacao1 = SubResource( 3 )

[node name="CaixaDialogo" type="ColorRect" parent="."]
margin_top = 424.0
margin_right = 1024.0
margin_bottom = 607.0

[node name="VBoxContainer" type="VBoxContainer" parent="CaixaDialogo"]
margin_left = 9.0
margin_top = 6.0
margin_right = 1158.0
margin_bottom = 196.0
rect_scale = Vector2( 1.4, 1.4 )

[node name="Escolha1" type="LinkButton" parent="CaixaDialogo/VBoxContainer"]
modulate = Color( 0.588235, 0, 0, 1 )
margin_right = 1149.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 5 )
text = "a) Recusar a oferta e instalar a fibra da Rápida Conexão"
underline = 1

[node name="Escolha2" type="LinkButton" parent="CaixaDialogo/VBoxContainer"]
modulate = Color( 0.588235, 0, 0, 1 )
margin_top = 30.0
margin_right = 1149.0
margin_bottom = 56.0
focus_mode = 2
custom_fonts/font = SubResource( 5 )
text = "b) Confrontar o Robert sobre sua falta de ética ao fazer essa oferta"
underline = 1

[node name="Escolha3" type="LinkButton" parent="CaixaDialogo/VBoxContainer"]
modulate = Color( 0.588235, 0, 0, 1 )
margin_top = 60.0
margin_right = 1149.0
margin_bottom = 86.0
focus_mode = 2
custom_fonts/font = SubResource( 5 )
text = "c) Pegar o dinheiro, mas não instalar a fibra e usar para auxiliar na renda da sua família"
underline = 1

[node name="Escolha4" type="LinkButton" parent="CaixaDialogo/VBoxContainer"]
modulate = Color( 0.588235, 0, 0, 1 )
margin_top = 90.0
margin_right = 1149.0
margin_bottom = 116.0
focus_mode = 2
custom_fonts/font = SubResource( 5 )
text = "d) Aceitar o dinheiro e instalar a fibra da Boa Comunicação S.A."
underline = 1

[node name="conversa" type="Label" parent="CaixaDialogo"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 8.0
margin_top = 48.0
margin_right = 1006.0
margin_bottom = 154.0
custom_fonts/font = SubResource( 4 )
text = "tttttttttttttttt"
align = 3
autowrap = true

[node name="Button" type="TextureButton" parent="CaixaDialogo"]
margin_left = 956.0
margin_top = 121.0
margin_right = 1033.0
margin_bottom = 183.0
texture_normal = ExtResource( 1 )
expand = true

[node name="nome" type="Label" parent="CaixaDialogo"]
anchor_left = -0.008
anchor_right = -0.008
margin_left = 16.192
margin_top = 1.0
margin_right = 341.192
margin_bottom = 166.0
custom_colors/font_color = Color( 0.560784, 0.152941, 0.152941, 1 )
custom_fonts/font = SubResource( 9 )
text = "Robert 

"
autowrap = true

[node name="nome2" type="Label" parent="CaixaDialogo"]
margin_left = 109.0
margin_top = 13.0
margin_right = 280.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0.560784, 0.152941, 0.152941, 1 )
custom_fonts/font = SubResource( 10 )
text = "(de dentro do carro)"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Personagem" parent="." instance=ExtResource( 2 )]
position = Vector2( 194, 190 )
scale = Vector2( 1.2, 1.2 )

[node name="atencao" type="Sprite" parent="."]
position = Vector2( 539, 195 )
scale = Vector2( 0.49862, 0.592794 )
texture = ExtResource( 9 )

[node name="passar" type="TouchScreenButton" parent="atencao"]
position = Vector2( 262.564, 501.276 )
scale = Vector2( 0.219298, 0.191462 )
normal = ExtResource( 1 )

[node name="feedback" type="Label" parent="atencao"]
margin_left = -469.0
margin_top = 142.0
margin_right = 321.0
margin_bottom = 576.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.678431, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 8 )
text = "teste"
align = 3
valign = 1
autowrap = true

[node name="parabens" type="Sprite" parent="."]
position = Vector2( 464, 230 )
scale = Vector2( 0.438477, 0.521291 )
texture = ExtResource( 10 )

[node name="passar" type="TouchScreenButton" parent="parabens"]
position = Vector2( 499.456, 494.925 )
scale = Vector2( 0.219298, 0.191462 )
normal = ExtResource( 1 )

[node name="feedback" type="Label" parent="parabens"]
margin_left = -360.338
margin_top = 23.0197
margin_right = 546.662
margin_bottom = 502.02
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.678431, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 11 )
text = "teste"
align = 3
valign = 1
autowrap = true

[node name="CanvasLayer" parent="." instance=ExtResource( 8 )]
visible = false

[connection signal="body_entered" from="." to="." method="_on_Situao1_body_entered"]
[connection signal="body_entered" from="." to="Personagem" method="_on_Situao1_body_entered"]
[connection signal="body_exited" from="." to="Personagem" method="_on_Situao1_body_exited"]
[connection signal="pressed" from="CaixaDialogo/VBoxContainer/Escolha1" to="." method="_on_Escolha1_pressed"]
[connection signal="pressed" from="CaixaDialogo/VBoxContainer/Escolha2" to="." method="_on_Escolha2_pressed"]
[connection signal="pressed" from="CaixaDialogo/VBoxContainer/Escolha3" to="." method="_on_Escolha3_pressed"]
[connection signal="pressed" from="CaixaDialogo/VBoxContainer/Escolha4" to="." method="_on_Escolha4_pressed"]
[connection signal="pressed" from="CaixaDialogo/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="atencao/passar" to="." method="_on_passar_pressed"]
[connection signal="pressed" from="parabens/passar" to="." method="_on_passar_pressed"]
